# pytorch_ultimate

./: .gitignore  makefile  pyproject.toml
notebooks/: neural_network_scratch.ipynb
src/: kaggle.py
src/nn_architectures/: nn_scratch.py
