[tool.poetry]
name = "pytorch-ultimate"
version = "0.1.0"
description = ""
authors = ["apavlidis <apavlidis@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
jupyter = "^1.0.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
kaggle = "^1.6.14"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[tool.ruff]
line-length = 120
extend-include = ["*.py", "*.ipynb"]
lint.extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
